--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@ai-sdk/google": "^0.0.30",
     "@ai-sdk/openai": "^0.0.40",
     "ai": "^3.2.40",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "nodemon": "^3.1.4",
